--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     background: #ea7bd9;
     border-color: #e628ed;
   }
-  .playerCard.major_ {
+  .playerCard.major_ten {
     background: #f08d47;
     border-color: #dd490a;
   }
