--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
   }
 
   function renderPlayer(p) {
+    console.log("PLAYER OBJ:", p);
     const box = el("player_meta");
     if (!p) { box.style.display = "none"; return; }
 
