--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     box.style.display = "block";
 
     // reset and apply color class
-    box.className = "playerCard " + cardClassForPlayer(p);
+    box.className = "playerCard." + cardClassForPlayer(p);
 
     console.log(box.className);
     box.innerHTML = `
