--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     if (age <= 9 && draft.includes("yes")) return "major_nine";
     if (age == 10 && draft.includes("yes")) return "major_ten";
     if (age >= 11 && draft.includes("no")) return "minor_eleven";
-    if ((age >= 11 && draft.includes("yes")) || (age <= 10 && draft.inclues("no"))) return "ok";    
+    if ((age >= 11 && draft.includes("yes")) || (age <= 10 && draft.includes("no"))) return "ok";    
 
     return "info";
   }
