--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
     <div class="row">
       <div>
         <label>Hitting</label>
-        <input id="hitting" type="number" min="0" max="10" step="1" value="5" inputmode="numeric" />
+        <input id="hitting" type="number" min="0" max="10" step="1" value="" inputmode="numeric" />
       </div>
       <div>
         <label>Throwing</label>
-        <input id="throwing" type="number" min="0" max="10" step="1" value="5" inputmode="numeric" />
+        <input id="throwing" type="number" min="0" max="10" step="1" value="" inputmode="numeric" />
       </div>
     </div>
 
     <div class="row">
       <div>
         <label>Fielding</label>
-        <input id="fielding" type="number" min="0" max="10" step="1" value="5" inputmode="numeric" />
+        <input id="fielding" type="number" min="0" max="10" step="1" value="" inputmode="numeric" />
       </div>
       <div></div>
     </div>
@@ -427,4 +427,5 @@
 </script>
 </body>
 </html>
+
 
