--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 
         // Keep coach (persistent) and player selection; reset scoring inputs only
         el("notes").value = "";
-        el("hitting").value = "5";
-        el("throwing").value = "5";
-        el("fielding").value = "5";
+        el("hitting").value = "";
+        el("throwing").value = "";
+        el("fielding").value = "";
         el("pitcher").checked = false;
         el("catcher").checked = false;
         el("throwing_hand").value = "R";
@@ -427,6 +427,7 @@
 </script>
 </body>
 </html>
+
 
 
 
